First commit - layout done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,13 @@
 <resources>
-    <string name="app_name">AndroidFinalProject</string>
+    <string name="app_name">Cocktail Database</string>
     <string name="action_settings">Settings</string>
+    <string name="hint_text"> Type here:</string>
+    <string name="cocktail_button">Cocktail</string>
+    <string name="pexel_button">Pexel</string>
+    <string name="owlbot_button">Owlbot</string>
+    <string name="nutrition_button">nutrition</string>
+    <string name="enter_button">Search</string>
+
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -9,4 +16,5 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
 </resources>
