--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -14,8 +14,11 @@
     <string name="second_fragment_label">第二区</string>
     <string name="next">下一个</string>
     <string name="previous">上一个</string>
-
     <string name="hello_first_fragment">你好，第一区</string>
     <string name="hello_second_fragment">你好，第二区 Arg: %1$s</string>
+    <string name="thumbnail">缩略图</string>
+    <string name="instructions">操作指导</string>
+    <string name="save">保存</string>
+    <string name="delete">删除</string>
 
 </resources>
