Working on SQLite

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
 
     <string name="save">save</string>
     <string name="delete">delete</string>
+    <string name="Saved">Saved!!</string>
 
 </resources>
