--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -25,5 +25,12 @@
     <string name="detail_has_no_id">id为空!</string>
     <string name="detail_alert_confirm">确定</string>
     <string name="detail_delete_database_confirm">是否确定从数据库中删除明细？</string>
+    <string name="detail_menu_author">作者</string>
+    <string name="detail_menu_description">描述</string>
+    <string name="detail_menu_version">版本</string>
+    <string name="detail_menu_author_content">lian0094</string>
+    <string name="detail_menu_description_content">这是一个详情页面</string>
+    <string name="detail_menu_version_content">V1.0.0</string>
+    <string name="detail_label">详情</string>
 
 </resources>
