--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="owlbot_button">Owlbot</string>
     <string name="nutrition_button">nutrition</string>
     <string name="enter_button">Search</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
